--- a/views/chargement_views.xml
+++ b/views/chargement_views.xml
@@ -52,6 +52,7 @@
 
     <menuitem
         name="Carburant"
+        web_icon="carburant,static/description/icon.png"
         id="menu_carburant_root"/>
     <menuitem
         name="Carburant"
@@ -61,6 +62,7 @@
     <menuitem
         id="menu_chargement_miss"
         name="Chargement"
+        groups="carburant.group_carburant_comptability,carburant.group_carburant_visiteur"
         parent="menu_carburant_carburant"
         action="carburant_chargement_action"
         sequence="2"/>
