--- a/views/cartecarburant_views.xml
+++ b/views/cartecarburant_views.xml
@@ -87,6 +87,7 @@
 
     <menuitem
         name="Carburant"
+        web_icon="mission,static/description/icon.png"
         id="menu_carburant_root"/>
     <menuitem
         name="Carburant"
